# VoxFlow

./: .gitignore  BarWidget.qml  CLAUDE.md  HistoryPanel.qml  LiveCaption.qml  Main.qml  PKGBUILD  README.md  Settings.qml  install.sh  manifest.json
backend/: CMakeLists.txt  Makefile  voxflow-backend
backend/src/: api.cpp  api.h  audio.cpp  audio.h  clipboard.cpp  clipboard.h  config.h  hypr.cpp  hypr.h  json_rpc.cpp  json_rpc.h  main.cpp  stream_api.cpp  stream_api.h
i18n/: en.json
